committing for the first time

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <div class="social-links col-md-12"></div>
                 <div class="col-md-12">
 
-                    <h1>I Am a Journalist and Programmer</h1>
-                    <div class="byline">By <a href="#">Your Name Here, Esq.</a></div>
+                    <h1>Columbia Unemployment Data</h1>
+                    <div class="byline">By <a href="#">Andrew Kreighbaum</a></div>
 
                     <div class="meta">
-                        Published October 18th, 2014
+                        Published February 21st, 2015
                     </div>
                 </div>
             </header>
@@ -43,7 +43,7 @@
             </section>
 
             <footer>
-                <div id="source-line">Source: Source goes here.</div>
+                <div id="source-line">Source: Bureau of Labor Statistics</div>
             </footer>
 
         </div>
